Added rotation ray-casting and other stuff